--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Apple</title>
+  <title>iPad 10.2 - Apple (KR)</title>
+
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Apple (KR)" />
+  <meta property="og:title" content="iPad 10.2" />
+  <meta property="og:description" content="강력한 A13 Bionic 칩을 탑재한 iPad. 센터 스테이지 기술이 적용된 12MP 울트라 와이드 전면 카메라, True Tone 디스플레이 기술 및 64GB 저장 용량까지 갖췄습니다." />
+  
 </head>
 <body>
-  <p>깃허브 커밋 테스트</p>
 </body>
 </html>
