--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
   <meta property="twitter:image" content="./images/ipad-seo.png" />
   <meta property="twitter:url" content="https://www.apple.com/kr/ipad-10.2/" />
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+
+  <link rel="stylesheet" href="./css/main.css" />
 </head>
 <body>
   <div class="zandi">휴일의 잔디심기</div>
