의미없는 그저 잔디심는 나쁜 커밋...

--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
   <link rel="stylesheet" href="./css/main.css" />
 </head>
 <body>
-  <div class="zandi">휴일의 잔디심기</div>
+  <div class="zandi"></div>
 </body>
 </html>
