--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>iPad 10.2 - Apple (KR)</title>
 
   <meta property="og:type" content="website" />
@@ -28,6 +27,28 @@
   <link rel="stylesheet" href="./css/main.css" />
 </head>
 <body>
-  <div class="zandi"></div>
+
+  <!-- Header -->
+  <header>
+    <div class="inner">
+
+      <ul class="menu">
+        <li class="apple-logo"><a href="javascript:void(0)">Apple</a></li>
+        <li><a href="javascript:void(0)">스토어</a></li>
+        <li><a href="javascript:void(0)">Mac</a></li>
+        <li><a href="javascript:void(0)">iPad</a></li>
+        <li><a href="javascript:void(0)">iPhone</a></li>
+        <li><a href="javascript:void(0)">Watch</a></li>
+        <li><a href="javascript:void(0)">AirPdos</a></li>
+        <li><a href="javascript:void(0)">Aplle 독정 제공</a></li>
+        <li><a href="javascript:void(0)">엑세서리</a></li>
+        <li><a href="javascript:void(0)">고객지원</a></li>
+        <li class="search-starter"><a href="javascript:void(0)">검색</a></li>
+        <li class="basket-starter"><a href="javascript:void(0)">장바구니</a></li>
+      </ul>
+
+    </div>
+  </header>
+
 </body>
 </html>
