--- a/index.html
+++ b/index.html
@@ -23,15 +23,9 @@
       content="강력한 A13 Bionic 칩을 탑재한 iPad. 센터 스테이지 기술이 적용된 12MP 울트라 와이드 전면 카메라, True Tone 디스플레이 기술 및 64GB 저장 용량까지 갖췄습니다."
     />
     <meta property="twitter:image" content="./images/ipad-seo.png" />
-    <meta
-      property="twitter:url"
-      content="https://www.apple.com/kr/ipad-10.2/"
-    />
+    <meta property="twitter:url" content="https://www.apple.com/kr/ipad-10.2/" />
 
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -86,14 +80,10 @@
               <h3>빠른 링크</h3>
               <ul>
                 <li>
-                  <a href="javascript:void(0)"
-                    >Apple Store 임시 휴무 관련 자주하는 질문</a
-                  >
+                  <a href="javascript:void(0)">Apple Store 임시 휴무 관련 자주하는 질문</a>
                 </li>
                 <li>
-                  <a href="javascript:void(0)"
-                    >Apple Store Online에서 쇼핑하기</a
-                  >
+                  <a href="javascript:void(0)">Apple Store Online에서 쇼핑하기</a>
                 </li>
                 <li><a href="javascript:void(0)">액세서리</a></li>
                 <li><a href="javascript:void(0)">AirPods</a></li>
@@ -124,14 +114,9 @@
         <h1 class="bgtext">iPad</h1>
         <div class="figures">
           <figure>
-            <img
-              src="./images/hero_ipad.jpg"
-              alt="iPad와 Smart Keybord 및 Apple Pencil"
-            />
+            <img src="./images/hero_ipad.jpg" alt="iPad와 Smart Keybord 및 Apple Pencil" />
             <figcaption class="bgtext">
-              <div class="caption-camera">
-                센터 스테이지 기술이 적용된 새로운 울트라 와이드 전면 카메라
-              </div>
+              <div class="caption-camera">센터 스테이지 기술이 적용된 새로운 울트라 와이드 전면 카메라</div>
               <div class="caption-chip">A13 BIONIC 칩 전격 탑재</div>
               <div class="caption-storage">저장 용량은 64GB부터</div>
             </figcaption>
@@ -140,13 +125,45 @@
         <h2 class="bgtext">매사를 더욱 쉽게</h2>
         <p class="pricing">￦449,000부터</p>
         <p class="description">
-          강력한 성능에 간편함과 다재다능까지 갖춘 새로워진 iPad. 당신이 어떤
-          일을 즐겨하든 함께할 수 있도록 디자인되었습니다. 직업, 취미, 공부,
-          소통 등. 이 모든 것을 부담 없이 누릴 수 있죠.
+          강력한 성능에 간편함과 다재다능까지 갖춘 새로워진 iPad. 당신이 어떤 일을 즐겨하든 함께할 수 있도록
+          디자인되었습니다. 직업, 취미, 공부, 소통 등. 이 모든 것을 부담 없이 누릴 수 있죠.
         </p>
         <div class="links">
           <a href="javascript:void(0)" class="link">이벤트 시청하기</a>
           <a href="javascript:void(0)" class="link">iPad를 선택하는 이유</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Power -->
+    <section class="power">
+      <div class="inner">
+        <div class="multiple-apps">
+          <h1 class="bgtext">거침없는 일 처리 성능</h1>
+          <div class="figures">
+            <figure>
+              <img src="./images/power_multiple_apps.png" alt="Keynote 마크업과 메세지가 함께 표시된 Split View" />
+              <figcaption class="bgtext">동시에 여러 앱 사용 가능</figcaption>
+            </figure>
+          </div>
+        </div>
+
+        <div class="arcade">
+          <div class="figures">
+            <figure>
+              <img src="./images/power_arcade.png" alt="iPad에 Wonderbox 앱이 열려 있는 모습" />
+              <figcaption class="bgtext">신나게 즐기는 새로운 APPLE ARCADE 게임</figcaption>
+            </figure>
+          </div>
+        </div>
+
+        <div class="create">
+          <div class="figures">
+            <figure>
+              <img src="./images/power_create.jpg" alt="Procreate에서 Apple Pencil로 그림이 그려져 있는 모습" />
+              <figcaption class="bgtext">스케치하고, 그리고, 색칠하고</figcaption>
+            </figure>
+          </div>
         </div>
       </div>
     </section>
