--- a/index.html
+++ b/index.html
@@ -722,6 +722,11 @@
           <a href="javascript:void(0)">iPad 10.2</a>
         </div>
 
+
+        <div class="navigations">
+          <!-- JS -->
+        </div>
+
       </div>
     </footer>
 
