M버전 헤더 - 검색 표시와 메뉴 목록

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <!-- Header -->
     <header>
       <div class="inner">
+
         <ul class="menu">
           <li class="menu-starter">
             <a>
@@ -100,6 +101,21 @@
             </div>
           </div>
         </div>
+
+        <div class="clone-menu">
+          <ul>
+            <li><a href="javascript:void(0)">스토어</a></li>
+            <li><a href="javascript:void(0)">Mac</a></li>
+            <li><a href="javascript:void(0)">iPad</a></li>
+            <li><a href="javascript:void(0)">iPhone</a></li>
+            <li><a href="javascript:void(0)">Watch</a></li>
+            <li><a href="javascript:void(0)">AirPdos</a></li>
+            <li><a href="javascript:void(0)">Aplle 독정 제공</a></li>
+            <li><a href="javascript:void(0)">엑세서리</a></li>
+            <li><a href="javascript:void(0)">고객지원</a></li>
+          </ul>
+        </div>
+
       </div>
     </header>
 
