M버전 네비게이션바 토글  작업

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 
     <!-- Navigation -->
     <nav>
+      <div class="shadow"></div>
       <div class="contents-bg"></div>
       <div class="inner">
         <h1>iPad</h1>
