--- a/index.html
+++ b/index.html
@@ -291,10 +291,10 @@
             <figure>
               <img src="./images/camera_hardware.png" alt="iPad의 영상 통화 중 센터 스테이지 기능이 사용되는 예시" />
               <video src="./videos/center-stage.mp4" muted loop></video>
-              <div class="controller--play hide">
+              <div class="controller--play">
                 재생 <img src="./images/video-play.svg" alt="play" />
               </div>
-              <div class="controller--pause">
+              <div class="controller--pause hide">
                 일시정지 <img src="./images/video-pause.svg" alt="pause" />
               </div>
               <figcaption class="bgtext">센터 스테이지 덕분에 영상 통화도 더 자연스럽게</figcaption>
