--- a/index.html
+++ b/index.html
@@ -771,6 +771,7 @@
             <li><a href="javascript:void(0)">판매 및 환불</a></li>
             <li><a href="javascript:void(0)">법적 고지</a></li>
             <li><a href="javascript:void(0)">사이트 맵</a></li>
+            <li><a href="javascript:void(0)">FINISH</a></li>
           </ul>
           <div class="locale">대한민국</div>
         </div>
